--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -28,3 +28,17 @@ main {
     @include flex ($justify: center);
 }
 
+.hidden {
+    display: none;
+}
+
+button {
+    color: $color-white;
+    background: $color-light-grey;
+    font-family: "Star Wars";
+    padding: 4px 12px;
+    margin-top: 8px;
+    :hover {
+        color: $color-yellow;
+    }
+}
