edited selects and yellow color

--- a/styles/partials/_compare.scss
+++ b/styles/partials/_compare.scss
@@ -4,11 +4,18 @@
 
 .inputs-compare {
     @include flex (column, center, center);
-    margin-bottom: 40px
+    margin-bottom: 40px;
+}
+
+#select1, #select2 {
+    color: $color-white;
+    background: $color-light-grey;
+    padding: 4px 12px;
+    margin: 8px;
 }
 
 .main-compare-wrapper {
-    @include flex (column, flex-start, center)
+    @include flex (column, flex-start, center);
 }
 
 #errorImg {
