--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -14,7 +14,7 @@ body {
 }
 
 .h1 {
-    color: yellow;
+    color: $color-yellow;
     font-family: "Star Wars", sans-serif;
     text-align: center;
     font-size: 5rem;
