--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .h1 {
-  color: yellow;
+  color: rgb(255, 221, 0);
   font-family: "Star Wars", sans-serif;
   text-align: center;
   font-size: 5rem;
@@ -50,7 +50,7 @@ button {
   margin-top: 8px;
 }
 button :hover {
-  color: rgb(255, 255, 0);
+  color: rgb(255, 221, 0);
 }
 
 .nav-ul {
@@ -77,7 +77,10 @@ button :hover {
   color: white;
 }
 .nav-li :hover {
-  color: rgb(255, 255, 0);
+  color: rgb(255, 221, 0);
+}
+.nav-li :active {
+  color: rgb(255, 221, 0);
 }
 
 .output-characters {
@@ -100,6 +103,13 @@ button :hover {
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
+}
+
+#select1, #select2 {
+  color: rgb(255, 255, 255);
+  background: rgb(84, 84, 84);
+  padding: 4px 12px;
+  margin: 8px;
 }
 
 .main-compare-wrapper {
@@ -137,4 +147,15 @@ button :hover {
 }
 .compare-holder > div {
   margin: 40px;
+}
+
+.main-outro {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.h2-outro, .p-outro {
+  color: rgb(255, 221, 0);
 }/*# sourceMappingURL=style.css.map */
