--- a/styles/partials/_outro.scss
+++ b/styles/partials/_outro.scss
@@ -1,7 +1,52 @@
 .main-outro {
-    @include flex (column, flex-start, center);
+    font-size: 5vw;
+    line-height: 1.3;
+    overflow: hidden;
+    color: $color-yellow;
+    text-align: center;
 }
 
-.h2-outro, .p-outro {
-    color: $color-yellow;
+.container {
+    margin: 0 auto;
+    perspective: 380px;
+    perspective-origin: bottom;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: visible;
+    transform: scaleY(0.9);
+}
+
+.credits {
+    position: absolute;
+    top: 500;
+    left: 13%;
+    right: 13%;
+    height: 100%;
+    animation: play 30s infinite;
+}
+
+.h2-outro {
+    font-size: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.p-outro {
+    padding: 0.5rem 0;
+    }
+    @keyframes play {
+    0% {
+    transform: rotateX(21deg) translate3d(0, 100rem, 0);
+    opacity: 1;
+    }
+    85% {
+    opacity: 1;
+    }
+    100% {
+    transform: rotateX(21deg) translate3d(0, -150rem, 0);
+    opacity: 0;
+    }
 }
