--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .h1 {
-  color: rgb(255, 221, 0);
+  color: rgb(255, 190, 0);
   font-family: "Star Wars", sans-serif;
   text-align: center;
   font-size: 5rem;
@@ -50,7 +50,7 @@ button {
   margin-top: 8px;
 }
 button :hover {
-  color: rgb(255, 221, 0);
+  color: rgb(255, 190, 0);
 }
 
 .nav-ul {
@@ -77,10 +77,10 @@ button :hover {
   color: white;
 }
 .nav-li :hover {
-  color: rgb(255, 221, 0);
+  color: rgb(255, 190, 0);
 }
 .nav-li :active {
-  color: rgb(255, 221, 0);
+  color: rgb(255, 190, 0);
 }
 
 .output-characters {
@@ -150,12 +150,70 @@ button :hover {
 }
 
 .main-outro {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
+  font-size: 5vw;
+  line-height: 1.3;
+  overflow: hidden;
+  color: rgb(255, 190, 0);
+  text-align: center;
 }
 
-.h2-outro, .p-outro {
-  color: rgb(255, 221, 0);
+.container {
+  margin: 0 auto;
+  perspective: 380px;
+  perspective-origin: bottom;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: visible;
+  transform: scaleY(0.9);
+}
+
+.credits {
+  position: absolute;
+  top: 500;
+  left: 13%;
+  right: 13%;
+  height: 100%;
+  -webkit-animation: play 30s infinite;
+          animation: play 30s infinite;
+}
+
+.h2-outro {
+  font-size: 3rem;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.p-outro {
+  padding: 0.5rem 0;
+}
+
+@-webkit-keyframes play {
+  0% {
+    transform: rotateX(21deg) translate3d(0, 100rem, 0);
+    opacity: 1;
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotateX(21deg) translate3d(0, -150rem, 0);
+    opacity: 0;
+  }
+}
+
+@keyframes play {
+  0% {
+    transform: rotateX(21deg) translate3d(0, 100rem, 0);
+    opacity: 1;
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotateX(21deg) translate3d(0, -150rem, 0);
+    opacity: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
