--- a/styles/partials/_outro.scss
+++ b/styles/partials/_outro.scss
@@ -1,52 +1,45 @@
 .main-outro {
-    font-size: 5vw;
-    line-height: 1.3;
     overflow: hidden;
     color: $color-yellow;
-    text-align: center;
+    height: 80vh;
+    // ::after {
+    //     content: "";
+    //     position: fixed;
+    //     top: 0;
+    //     width: 100%;
+    //     height: 50%;
+    //     background-color: linear-gradient (180deg, rgb(0, 0, 0) 40%, rgba(0, 0, 0, 0) 100%);
+    //     }
 }
 
 .container {
+    display: flex;
+    height: 100%;
+    width: 60%;
     margin: 0 auto;
-    perspective: 380px;
-    perspective-origin: bottom;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    overflow: visible;
-    transform: scaleY(0.9);
+
+    /* push down the the container by half the page */
+    margin: 35% 0 0 0;
+    position: relative;
+    perspective: 450px;
+    
 }
 
 .credits {
-    position: absolute;
-    top: 500;
-    left: 13%;
-    right: 13%;
-    height: 100%;
-    animation: play 30s infinite;
+    font-size: 4vw;
+    line-height: 4.5rem;
+    // font-weight: bold;
+    text-align: justify;
+    position: relative;
+    animation: scroll 40s linear forwards;
+    // transform: translateZ(-2500px) rotateX(20deg);
+}
+
+@keyframes scroll {
+    from { top: 0; transform: translateZ(0) rotateX(20deg)}
+    to {top: -6500px; transform: translateZ(-2500px) rotateX(21deg)}
 }
 
 .h2-outro {
-    font-size: 3rem;
-    text-transform: uppercase;
     text-align: center;
-}
-
-.p-outro {
-    padding: 0.5rem 0;
-    }
-    @keyframes play {
-    0% {
-    transform: rotateX(21deg) translate3d(0, 100rem, 0);
-    opacity: 1;
-    }
-    85% {
-    opacity: 1;
-    }
-    100% {
-    transform: rotateX(21deg) translate3d(0, -150rem, 0);
-    opacity: 0;
-    }
 }
