--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ body {
 
 main {
   background-color: rgb(10, 10, 10);
-  height: 130vh;
+  height: 90vh;
   width: 90%;
   display: flex;
   flex-direction: row;
@@ -50,6 +50,10 @@ button {
   margin-top: 8px;
 }
 button :hover {
+  color: rgb(255, 190, 0);
+}
+
+.nav-link.active {
   color: rgb(255, 190, 0);
 }
 
@@ -117,6 +121,7 @@ button :hover {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  height: 140vh;
 }
 
 #errorImg {
@@ -154,70 +159,52 @@ button :hover {
 }
 
 .main-outro {
-  font-size: 5vw;
-  line-height: 1.3;
   overflow: hidden;
   color: rgb(255, 190, 0);
-  text-align: center;
+  height: 80vh;
 }
 
 .container {
+  display: flex;
+  height: 100%;
+  width: 60%;
   margin: 0 auto;
-  perspective: 380px;
-  perspective-origin: bottom;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  overflow: visible;
-  transform: scaleY(0.9);
+  /* push down the the container by half the page */
+  margin: 35% 0 0 0;
+  position: relative;
+  perspective: 450px;
 }
 
 .credits {
-  position: absolute;
-  top: 500;
-  left: 13%;
-  right: 13%;
-  height: 100%;
-  -webkit-animation: play 30s infinite;
-          animation: play 30s infinite;
+  font-size: 4vw;
+  line-height: 4.5rem;
+  text-align: justify;
+  position: relative;
+  -webkit-animation: scroll 40s linear forwards;
+          animation: scroll 40s linear forwards;
 }
 
+@-webkit-keyframes scroll {
+  from {
+    top: 0;
+    transform: translateZ(0) rotateX(20deg);
+  }
+  to {
+    top: -6500px;
+    transform: translateZ(-2500px) rotateX(21deg);
+  }
+}
+
+@keyframes scroll {
+  from {
+    top: 0;
+    transform: translateZ(0) rotateX(20deg);
+  }
+  to {
+    top: -6500px;
+    transform: translateZ(-2500px) rotateX(21deg);
+  }
+}
 .h2-outro {
-  font-size: 3rem;
-  text-transform: uppercase;
   text-align: center;
-}
-
-.p-outro {
-  padding: 0.5rem 0;
-}
-
-@-webkit-keyframes play {
-  0% {
-    transform: rotateX(21deg) translate3d(0, 100rem, 0);
-    opacity: 1;
-  }
-  85% {
-    opacity: 1;
-  }
-  100% {
-    transform: rotateX(21deg) translate3d(0, -150rem, 0);
-    opacity: 0;
-  }
-}
-
-@keyframes play {
-  0% {
-    transform: rotateX(21deg) translate3d(0, 100rem, 0);
-    opacity: 1;
-  }
-  85% {
-    opacity: 1;
-  }
-  100% {
-    transform: rotateX(21deg) translate3d(0, -150rem, 0);
-    opacity: 0;
-  }
 }/*# sourceMappingURL=style.css.map */
