tried fixing font link

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Star wars";
-    src: url("../../assets/fonts/Starjedi.ttf");
+    src: url("/assets/fonts/Starjedi.ttf");
 }
 
 //COLORS 
