--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Star wars";
-  src: url("/assets/fonts/Starjedi.ttf");
+  src: url("../../assets/fonts/Starjedi.ttf");
 }
 body {
   margin: 0;
@@ -134,7 +134,7 @@ button :hover {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 140vh;
+  height: 145vh;
 }
 
 .error-div {
@@ -161,6 +161,10 @@ button :hover {
   height: 10rem;
 }
 
+.second {
+  margin-top: 2rem;
+}
+
 .character-card {
   margin: 2rem;
 }
@@ -184,6 +188,11 @@ button :hover {
 
 .differences {
   text-align: center;
+}
+
+.first-movie-text {
+  width: 30%;
+  margin: 3rem;
 }
 
 .play-audio {
