--- a/styles/partials/_compare.scss
+++ b/styles/partials/_compare.scss
@@ -4,7 +4,7 @@
 
 .inputs-compare {
     @include flex (column, center, center);
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 #select1, #select2 {
@@ -16,7 +16,8 @@
 
 .main-compare-wrapper {
     @include flex (column, flex-start, center);
-    height: 145vh;
+    height: auto;
+    margin-bottom: 20px;
 }
 
 .error-div {
@@ -34,6 +35,7 @@
     border-radius: 100px;
     box-shadow: 0 0 16px 16px $color-black;
     height: 10rem;
+    margin-top: 20px;
 }
 
 .second {
@@ -59,7 +61,16 @@
     text-align: center;
 }
 
-.first-movie-text {
-    width: 30%;
-    margin: 3rem;
+.button-wrapper {
+    @include flex (row, center, center);
+}
+
+.messages {
+    width: 50%;
+    height: auto;
+    margin-bottom: 12px;
+    background-color: $color-light-grey;
+    padding: 1rem;
+    border: solid 2px $color-white;
+    border-radius: 4px;
 }
