--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -38,9 +38,10 @@ button {
     font-family: "Star Wars";
     padding: 4px 12px;
     margin-top: 8px;
-    :hover {
-        color: $color-yellow;
-    }
+}
+
+button:hover {
+    color: $color-yellow;
 }
 
 .nav-link.active {
