--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,8 @@ button {
   padding: 4px 12px;
   margin-top: 8px;
 }
-button :hover {
+
+button:hover {
   color: rgb(255, 190, 0);
 }
 
@@ -119,7 +120,7 @@ button :hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 
 #select1, #select2 {
@@ -134,7 +135,8 @@ button :hover {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 145vh;
+  height: auto;
+  margin-bottom: 20px;
 }
 
 .error-div {
@@ -159,6 +161,7 @@ button :hover {
   border-radius: 100px;
   box-shadow: 0 0 16px 16px rgb(0, 0, 0);
   height: 10rem;
+  margin-top: 20px;
 }
 
 .second {
@@ -190,9 +193,21 @@ button :hover {
   text-align: center;
 }
 
-.first-movie-text {
-  width: 30%;
-  margin: 3rem;
+.button-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.messages {
+  width: 50%;
+  height: auto;
+  margin-bottom: 12px;
+  background-color: rgb(84, 84, 84);
+  padding: 1rem;
+  border: solid 2px rgb(255, 255, 255);
+  border-radius: 4px;
 }
 
 .play-audio {
