added function to get most expensive vehicles/starships

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -35,7 +35,7 @@ main {
 button {
     color: $color-white;
     background: $color-light-grey;
-    font-family: "Star Wars";
+    font-family: "Star wars", sans-serif;
     padding: 4px 12px;
     margin-top: 8px;
 }
