--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Star wars";
-  src: url("../../assets/fonts/Starjedi.ttf") format("truetype");
+  src: url("./../../assets/fonts/Starjedi.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -47,7 +47,7 @@ main {
 button {
   color: rgb(255, 255, 255);
   background: rgb(84, 84, 84);
-  font-family: "Star Wars";
+  font-family: "Star wars", sans-serif;
   padding: 4px 12px;
   margin-top: 8px;
 }
