--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Star wars";
-  src: url("./../../assets/fonts/Starjedi.ttf") format("truetype");
+  src: url("../../assets/fonts/Starjedi.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -95,6 +95,11 @@ button:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.img-index {
+  margin-top: 20px;
+  width: 70%;
 }
 
 .text-index {
